# StatCat

./: '  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  config.toml  example_config.toml  install.sh  perf.data  perf.data.old
src/: config.rs  config.toml  fetch.rs  fetch_hw.rs  main.rs  misc.rs  packages.rs
~/.local/share/nvim/undo/: %home%cj%projects%statcat%.gitignore  %home%cj%projects%statcat%Cargo.toml  %home%cj%projects%statcat%shell.nix  %home%cj%projects%statcat%src%misc.rs
