[package]
name = "statcat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "statcat"
path = "src/main.rs"

[dependencies]
battery = "0.7.8"
chrono = "0.4.38"
dirs = "5.0.1"
home = "0.5.11"
itertools = "0.13.0"
libc = "0.2.169"
nixinfo = "0.3.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

[profile.release]
debug = true
